--- a/public/index.html
+++ b/public/index.html
@@ -1,1 +1,29 @@
-<link rel='stylesheet' href='./styles.css'
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='./styles.css'>
+    <meta name="description" content="Fill Me In">
+    <meta name="author" content="Prometheus">
+    <title>Zomato API App</title>
+</head>
+<body>
+    <header>
+        <div>
+            <div>
+                <a>Zomato API Interface App</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <h1>
+            Zomato API App
+        </h1>
+        <p>
+            This is an app that connects to the Zomato API and retrieves information from it.
+        </p>
+    </main>
+    <script src="./main.js"></script>
+</body>
+</html>
