--- a/public/index.html
+++ b/public/index.html
@@ -4,26 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='./styles.css'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <meta name="description" content="Fill Me In">
     <meta name="author" content="Prometheus">
     <title>Zomato API App</title>
 </head>
 <body>
     <header>
-        <div>
-            <div>
-                <a>Zomato API Interface App</a>
+        <nav>
+            <div class="nav-wrapper">
+              <a href="#" class="brand-logo cust-pad">Zomato API App</a>
+              <ul id="nav-mobile" class="right hide-on-med-and-down">
+                <li><a href="sass.html">Sass</a></li>
+                <li><a href="badges.html">Components</a></li>
+                <li><a href="collapsible.html">JavaScript</a></li>
+              </ul>
             </div>
-        </div>
+          </nav>
     </header>
     <main>
-        <h1>
-            Zomato API App
-        </h1>
-        <p>
-            This is an app that connects to the Zomato API and retrieves information from it.
-        </p>
+        <section class="body-head">
+            <h1>
+                Zomato API App
+            </h1>
+            <p>
+                This is an app that connects to the Zomato API and retrieves information from it.
+            </p>
+        </section>
+        <section class="input-field">
+            <div>
+                <input type="text" id="in1">
+                <button class="btn waves-effect waves-light" id="in2" type="submit" name="action">Search</button>
+            </div>
+        </section>
+        <section class="outputSec">
+            <div>
+                
+            </div>
+        </section>
     </main>
     <script src="./main.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
