--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel='stylesheet' href='./styles.css'>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="description" content="Fill Me In">
     <meta name="author" content="Prometheus">
     <title>Zomato API App</title>
@@ -30,6 +31,10 @@
             <p>
                 This is an app that connects to the Zomato API and retrieves information from it.
             </p>
+            <br><br><br><br>
+            <p>
+                Type in a city you want to search by to begin.
+            </p>
         </section>
         <section class="input-field">
             <div>
@@ -39,11 +44,12 @@
         </section>
         <section class="outputSec">
             <div>
-                
+
             </div>
         </section>
     </main>
     <script src="./main.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
