--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             </div>
         </section>
     </main>
-    <script src="./main.js"></script>
+    <script type='module' src="./main.js"></script>
+    <script type='module' src="./zomatoConnect.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
