--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </section>
         <section class="outputSec">
-            <div>
+            <div id="outDest">
 
             </div>
         </section>
