--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
             <div class="nav-wrapper">
               <a href="#" class="brand-logo cust-pad">Zomato API App</a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
-                <li><a href="sass.html">Sass</a></li>
-                <li><a href="badges.html">Components</a></li>
-                <li><a href="collapsible.html">JavaScript</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="favorites.html">Favorites</a></li>
               </ul>
             </div>
           </nav>
